Merge performance fixes/improvements