@@ -138,14 +138,6 @@
                         --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.lang=ALL-UNNAMED
                         --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.lang.support=ALL-UNNAMED
 
-                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.codec=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.codec.json=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http.server=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http.server.router=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http.server.router.impl=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http.server.netty=ALL-UNNAMED
-
                         --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.examples.async=ALL-UNNAMED
                         --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.async=ALL-UNNAMED
                         --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.scheduler=ALL-UNNAMED
